--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@ form button:hover {
 
   .overlay-text {
     font-size: 15px; /* Μειώνει το μέγεθος γραμματοσειράς για κινητά */
+    width: 90%;
   }
 
   header h1 {
