--- a/index.html
+++ b/index.html
@@ -161,19 +161,20 @@ form button:hover {
   border-right: 0.15em solid orange;
 }
 
-.hamburger {
-  display: none;
-  font-size: 2rem;
-  color: #F4D35E;
-  background: #2C3E50;
-  padding: 10px 15px;
-  cursor: pointer;
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  z-index: 1001;
-  border-radius: 5px;
-}
+    .hamburger {
+          display: none;
+          font-size: 1.5rem; /* Μείωση του μεγέθους γραμματοσειράς */
+          color: #F4D35E;
+          background: #2C3E50;
+          padding: 8px 12px; /* Μείωση του padding */
+          cursor: pointer;
+          position: absolute;
+          top: 10px; /* Μείωση της απόστασης από την κορυφή */
+          right: 10px; /* Μείωση της απόστασης από τα δεξιά */
+          z-index: 1001;
+          border-radius: 4px; /* Μείωση της στρογγυλοποίησης των γωνιών */
+        }
+
 
 @media (max-width: 768px) {
   nav#main-nav {
