--- a/index.html
+++ b/index.html
@@ -218,12 +218,8 @@ form button:hover {
   }
 
   .overlay-text {
-    font-size: 15px; /* Μειώνει το μέγεθος γραμματοσειράς για κινητά */
-    max-width: 90%; /* Περιορίζει το πλάτος του κειμένου */
-    overflow-wrap: break-word; /* Επιτρέπει το "σπάσιμο" των λέξεων */
-    padding: 10px; /* Προσθέτει padding για καλύτερη εμφάνιση */
+    font-size: 18px;
   }
-}
 
   header h1 {
     font-size: 1.2em;
@@ -251,7 +247,9 @@ form button:hover {
   form button {
     padding: 10px; /* Μικρότερο padding σε μικρότερες οθόνες */
   }
-
+ .overlay-text {
+    font-size: 16px;
+  }
   .modal-content {
     padding: 20px; /* Μικρότερο padding στο modal σε μικρότερες οθόνες */
   }
