--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
-
+@media (max-width: 768px) {
+  .culture-img {
+    height: 100vh; /* 60% του ύψους της οθόνης */
+    object-fit: cover; /* Καλύπτει ολόκληρο το container */
+  }
+}
 
 
 #topBtn {
