--- a/projects.html
+++ b/projects.html
@@ -224,20 +224,22 @@
 }
 @media (max-width: 768px) {
   .puzzle-gallery {
-    display: block; /* Απενεργοποίηση του grid σε κινητά */
-    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
   }
 
   .puzzle-gallery img {
-  width: 100vw;
-  max-width: 390px;
-  margin: 10px;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    display: block;
+  }
+}
 
-  border-radius: 10px;
-  height: auto;
-  display: block;
-}
-}
 
   </style>
 </head>
