--- a/projects.html
+++ b/projects.html
@@ -177,18 +177,17 @@
 
     /* Στυλ για τα modals */
     .modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
-  z-index: 1000; /* Προσθήκη z-index για να έρθει πάνω από όλα τα άλλα στοιχεία */
-}
-
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
 
     .modal-content {
       background-color: white;
@@ -196,6 +195,7 @@
       border-radius: 10px;
       width: 80%;
       max-width: 600px;
+      position: relative; /* Προσθήκη για το απόλυτα τοποθετημένο "X" */
     }
 
     .close {
@@ -224,22 +224,20 @@
 }
 @media (max-width: 768px) {
   .puzzle-gallery {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
+    display: block; /* Απενεργοποίηση του grid σε κινητά */
+    padding: 0;
   }
 
   .puzzle-gallery img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-    display: block;
-  }
-}
+  width: 100vw;
+  max-width: 390px;
+  margin: 10px;
 
+  border-radius: 10px;
+  height: auto;
+  display: block;
+}
+}
 
   </style>
 </head>
@@ -415,7 +413,7 @@ puzzleImages.forEach(img => {
 
   </script>
  <script>
-    function openModal(category) {
+   function openModal(category) {
       document.getElementById(category + 'Modal').style.display = 'flex';
     }
 
