--- a/volunteer.html
+++ b/volunteer.html
@@ -277,7 +277,7 @@
 
     <section id="volunteer" class="content-section">
         <div class="content-wrapper">
-            <h3 data-aos="fade-left">Η Αξία του Εθελοντισμού</h3>
+            <h3 data-aos="fade-left">Γίνε Εθελοντής</h3>
             <div class="left-align" data-aos="fade-left">
                 <ul>
                     <li data-aos="fade-left" data-aos-delay="50">Ο εθελοντισμός είναι μια ανεκτίμητη πράξη προσφοράς προς την κοινωνία και τον κόσμο γύρω μας. Ο εθελοντής προσφέρει χρόνο, ενέργεια και ικανότητες για την υποστήριξη δράσεων που στοχεύουν σε ένα καλύτερο μέλλον για όλους μας. Εθελοντισμός δεν είναι μόνο η συμμετοχή σε δραστηριότητες, είναι η ευκαιρία να αλλάξουμε την κοινωνία και να προσφέρουμε σε άλλους χωρίς αντάλλαγμα. Η εμπειρία του εθελοντή είναι μια εμπειρία αναγνώρισης, εξέλιξης και συνεισφοράς.</li>
