--- a/contact.html
+++ b/contact.html
@@ -101,9 +101,9 @@
         <!-- Στοιχεία Επικοινωνίας -->
         <div class="contact-info" style="flex: 1; min-width: 250px; font-size: 1em; line-height: 1.8;">
           <h4>Στοιχεία Επικοινωνίας</h4>
-          <p><i class="fas fa-map-marker-alt"></i> <strong>Διεύθυνση:</strong><br> Λεωφόρος Πολιτισμού 12, Αθήνα 10558</p>
+          <p><i class="fas fa-map-marker-alt"></i> <strong>Διεύθυνση:</strong><br> Λάμπρου Κατσώνη 51, Αθήνα 11471</p>
           <p><i class="fas fa-phone"></i> <strong>Τηλέφωνο:</strong><br> +30 210 1234567</p>
-          <p><i class="fas fa-envelope"></i> <strong>Email:</strong><br> info@interaction.org</p>
+          <p><i class="fas fa-envelope"></i> <strong>Email:</strong><br> amkeinteraction@mail.com</p>
   
           <h4 style="margin-top: 20px;">Ακολουθήστε μας</h4>
           <style>
