--- a/contact.html
+++ b/contact.html
@@ -91,12 +91,13 @@
       <div class="contact-container" style="display: flex; flex-wrap: wrap; gap: 40px; justify-content: center;">
   
         <!-- Φόρμα Επικοινωνίας -->
-        <form class="contact-form" style="flex: 1; min-width: 300px;">
-          <input type="text" placeholder="Το όνομά σας" required />
-          <input type="email" placeholder="Το email σας" required />
-          <textarea placeholder="Μήνυμά σας" required></textarea>
-          <button type="submit">Αποστολή</button>
-        </form>
+    <form class="contact-form" action="https://formspree.io/f/xblgwrjr" method="POST">
+  <input type="text" name="name" placeholder="Το όνομά σας" required />
+  <input type="email" name="email" placeholder="Το email σας" required />
+  <textarea name="message" placeholder="Μήνυμά σας" required></textarea>
+  <button type="submit">Αποστολή</button>
+</form>
+
   
         <!-- Στοιχεία Επικοινωνίας -->
         <div class="contact-info" style="flex: 1; min-width: 250px; font-size: 1em; line-height: 1.8;">
@@ -173,6 +174,27 @@
       window.scrollTo({ top: 0, behavior: "smooth" });
     }
   </script>
+  <script>
+  const form = document.querySelector(".contact-form");
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault();
+    const formData = new FormData(form);
+    const response = await fetch(form.action, {
+      method: "POST",
+      body: formData,
+      headers: {
+        Accept: "application/json"
+      }
+    });
+    if (response.ok) {
+      alert("Το μήνυμά σας εστάλη επιτυχώς!");
+      form.reset();
+    } else {
+      alert("Παρουσιάστηκε σφάλμα. Δοκιμάστε ξανά.");
+    }
+  });
+</script>
+
   <script src="script.js"></script>
 </body>
 </html>
