--- a/member.html
+++ b/member.html
@@ -215,7 +215,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <h3>Φόρμα Εγγραφής</h3>
-            <form action="https://formsubmit.co/akronservices@mail.com" method="POST" onsubmit="showSuccessMessage(event)">
+            <form action="https://formspree.io/f/xblgwrjr" method="POST" onsubmit="showSuccessMessage(event)">
                 <input type="text" name="Ονοματεπώνυμο" placeholder="Ονοματεπώνυμο" required>
                 <input type="email" name="Email" placeholder="Email" required>
                 <input type="tel" name="Τηλέφωνο" placeholder="Τηλέφωνο" required>
