--- a/member.html
+++ b/member.html
@@ -215,17 +215,15 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <h3>Φόρμα Εγγραφής</h3>
-            <form action="https://formspree.io/f/xblgwrjr" method="POST" onsubmit="showSuccessMessage(event)">
-                <input type="text" name="Ονοματεπώνυμο" placeholder="Ονοματεπώνυμο" required>
-                <input type="email" name="Email" placeholder="Email" required>
-                <input type="tel" name="Τηλέφωνο" placeholder="Τηλέφωνο" required>
-                <input type="text" name="Τόπος Κατοικίας" placeholder="Τόπος Κατοικίας" required>
-                <input type="text" name="Διεύθυνση" placeholder="Διεύθυνση" required>
-
-                <textarea name="Μήνυμα" placeholder="Γράψε το μήνυμά σου εδώ..." required></textarea>
-
-                <button type="submit">Υποβολή</button>
-            </form>
+         <form action="https://formspree.io/f/xblgwrjr" method="POST" onsubmit="showSuccessMessage(event)">
+  <input type="text" name="Ονοματεπώνυμο" placeholder="Ονοματεπώνυμο" required>
+  <input type="email" name="Email" placeholder="Email" required>
+  <input type="tel" name="Τηλέφωνο" placeholder="Τηλέφωνο" required>
+  <input type="text" name="Τόπος Κατοικίας" placeholder="Τόπος Κατοικίας" required>
+  <input type="text" name="Διεύθυνση" placeholder="Διεύθυνση" required>
+  <textarea name="Μήνυμα" placeholder="Γράψε το μήνυμά σου εδώ..." required></textarea>
+  <button type="submit">Υποβολή</button>
+</form>
         </div>
     </div>
 
@@ -265,6 +263,30 @@
             once: true,
         });
     </script>
+    <script>
+  function showSuccessMessage(event) {
+    event.preventDefault();
+    const form = event.target;
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: "POST",
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    }).then(response => {
+      if (response.ok) {
+        alert("Το μήνυμά σας στάλθηκε με επιτυχία!");
+        form.reset();
+      } else {
+        alert("Παρουσιάστηκε πρόβλημα. Δοκιμάστε ξανά.");
+      }
+    }).catch(error => {
+      alert("Σφάλμα σύνδεσης. Ελέγξτε τη σύνδεσή σας.");
+    });
+  }
+</script>
     <script src="script.js"></script>
 </body>
 
