--- a/projects.html
+++ b/projects.html
@@ -8,268 +8,268 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
    
-    .project-gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
+   .project-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
 
-    .project-gallery img {
-      width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
-    }
+        .project-gallery img {
+            width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            transition: transform 0.3s;
+        }
 
-    .project-gallery img:hover {
-      transform: scale(1.05);
-    }
+        .project-gallery img:hover {
+            transform: scale(1.05);
+        }
 
-    .container h3 {
-        color: #000000;
-  font-size: 1.8em;
-  margin-bottom: 15px;
-  border-bottom: 2px solid #F4D35E;
-  display: inline-block;
-  padding-bottom: 5px;
-    }
+        .container h3 {
+            color: #000000;
+            font-size: 1.8em;
+            margin-bottom: 15px;
+            border-bottom: 2px solid #F4D35E;
+            display: inline-block;
+            padding-bottom: 5px;
+        }
 
-    .puzzle-gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 10px;
-      padding: 20px;
-    }
-
-   
-    .puzzle-gallery img {
-  width: 100%;
-  height: 200px; /* Σταθερό ύψος */
-  object-fit: cover; /* Γεμίζει το πλαίσιο χωρίς να παραμορφώνει */
-  border-radius: 12px;
-  opacity: 0;
-  transform: scale(0.8) rotateZ(3deg);
-  transition: all 0.5s ease; /* Απλή μετάβαση για την εμφάνιση */
-}
-
-/* Ορισμός του animation */
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: scale(0.8) rotateZ(3deg);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1) rotateZ(0deg);
-  }
-}
+        .puzzle-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 10px;
+            padding: 20px;
+        }
 
 
+        .puzzle-gallery img {
+            width: 100%;
+            height: auto; /* Αλλαγή σε auto για να προσαρμόζεται το ύψος */
+            object-fit: cover; /* Γεμίζει το πλαίσιο χωρίς να παραμορφώνει */
+            border-radius: 12px;
+            opacity: 0;
+            transform: scale(0.8) rotateZ(3deg);
+            transition: all 0.5s ease; /* Απλή μετάβαση για την εμφάνιση */
+        }
+
+        /* Ορισμός του animation */
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.8) rotateZ(3deg);
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1) rotateZ(0deg);
+            }
+        }
 
 
 
 
-    .puzzle-gallery img.animate {
-      animation: fadeInPuzzle 1s ease forwards;
-    }
-
-    .puzzle-gallery img.animate:nth-child(1) { animation-delay: 0.2s; }
-    .puzzle-gallery img.animate:nth-child(2) { animation-delay: 0.6s; }
-    .puzzle-gallery img.animate:nth-child(3) { animation-delay: 1s; }
-    .puzzle-gallery img.animate:nth-child(4) { animation-delay: 1.4s; }
-    .puzzle-gallery img.animate:nth-child(5) { animation-delay: 1.8s; }
-    .puzzle-gallery img.animate:nth-child(6) { animation-delay: 2.2s; }
-    .puzzle-gallery img.animate:nth-child(7) { animation-delay: 2.6s; }
-    .puzzle-gallery img.animate:nth-child(8) { animation-delay: 3s; }
 
 
-    @keyframes fadeInPuzzle {
-      to {
-        opacity: 1;
-        transform: scale(1) rotateZ(0deg);
-      }
-    }
+        .puzzle-gallery img.animate {
+            animation: fadeInPuzzle 1s ease forwards;
+        }
 
-    .carousel-container {
-  position: relative;
-  width: 100%;
-  max-width: 1000px;
-  margin: 20px auto 40px; /* Προσθήκη margin-top για απόσταση από το header */
-  overflow: hidden;
-}
-
-.carousel-track {
-  display: flex;
-  transition: transform 0.5s ease;
-}
-
-.carousel-track img {
-  width: 100%;
-  flex-shrink: 0;
-  object-fit: cover;
-  border-radius: 12px;
-  height: 500px;
-  transition: transform 0.3s, box-shadow 0.3s ease-in-out;
-}
-
-/* Ενεργοποίηση φωτισμού όταν το καρουζέλ είναι σε hover */
-.carousel-track img:hover {
-  transform: scale(1.05); /* Μικρή αύξηση μεγέθους */
-  box-shadow: 0 0 20px rgba(255, 255, 0, 0.8); /* Φωτεινός θρόισμα γύρω από την εικόνα */
-}
-
-/* Προσθήκη φωτισμού στην τρέχουσα εικόνα */
-.carousel-track img.active {
-  filter: brightness(1.2);
-  box-shadow: 0 0 30px rgba(255, 255, 0, 0.9); /* Φωτεινός θρόισμα με περισσότερο φως */
-}
-
-.carousel-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: rgba(5, 0, 0, 1);
-  color: white;
-  border: none;
-  width: 40px;
-  height: 40px;
-  font-size: 1.2rem;
-  cursor: pointer;
-  z-index: 1;
-  border-radius: 50%;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background 0.3s, transform 0.3s;
-}
-
-.carousel-btn:hover {
-  background: rgba(255, 255, 255, 0.2);
-  transform: translateY(-50%) scale(1.1);
-}
-
-.carousel-btn.left {
-  left: 10px;
-}
-
-.carousel-btn.right {
-  right: 10px;
-}
+        .puzzle-gallery img.animate:nth-child(1) { animation-delay: 0.2s; }
+        .puzzle-gallery img.animate:nth-child(2) { animation-delay: 0.6s; }
+        .puzzle-gallery img.animate:nth-child(3) { animation-delay: 1s; }
+        .puzzle-gallery img.animate:nth-child(4) { animation-delay: 1.4s; }
+        .puzzle-gallery img.animate:nth-child(5) { animation-delay: 1.8s; }
+        .puzzle-gallery img.animate:nth-child(6) { animation-delay: 2.2s; }
+        .puzzle-gallery img.animate:nth-child(7) { animation-delay: 2.6s; }
+        .puzzle-gallery img.animate:nth-child(8) { animation-delay: 3s; }
 
 
-    .category-buttons button {
-      padding: 10px 20px;
-      background-color: #0a9396;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
+        @keyframes fadeInPuzzle {
+            to {
+                opacity: 1;
+                transform: scale(1) rotateZ(0deg);
+            }
+        }
 
-    .category-buttons button:hover {
-      background-color: #007f7f;
-    }
+        .carousel-container {
+            position: relative;
+            width: 100%;
+            max-width: 1000px;
+            margin: 20px auto 40px; /* Προσθήκη margin-top για απόσταση από το header */
+            overflow: hidden;
+        }
 
+        .carousel-track {
+            display: flex;
+            transition: transform 0.5s ease;
+        }
 
-    /* Στυλ για τα modals */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
+        .carousel-track img {
+            width: 100%;
+            flex-shrink: 0;
+            object-fit: cover;
+            border-radius: 12px;
+            height: 500px;
+            transition: transform 0.3s, box-shadow 0.3s ease-in-out;
+        }
 
-    .modal-content {
-      background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      width: 80%;
-      max-width: 600px;
-      position: relative; /* Προσθήκη για το απόλυτα τοποθετημένο "X" */
-    }
+        /* Ενεργοποίηση φωτισμού όταν το καρουζέλ είναι σε hover */
+        .carousel-track img:hover {
+            transform: scale(1.05); /* Μικρή αύξηση μεγέθους */
+            box-shadow: 0 0 20px rgba(255, 255, 0, 0.8); /* Φωτεινός θρόισμα γύρω από την εικόνα */
+        }
 
-    .close {
-      font-size: 24px;
-      color: #343a40;
-      cursor: pointer;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-    @media (max-width: 768px) {
-  .category-buttons {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-    margin-bottom: 20px;
-  }
+        /* Προσθήκη φωτισμού στην τρέχουσα εικόνα */
+        .carousel-track img.active {
+            filter: brightness(1.2);
+            box-shadow: 0 0 30px rgba(255, 255, 0, 0.9); /* Φωτεινός θρόισμα με περισσότερο φως */
+        }
 
-  .category-buttons button {
-    width: 90%;
-    font-size: 18px;
-  }
+        .carousel-btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(5, 0, 0, 1);
+            color: white;
+            border: none;
+            width: 40px;
+            height: 40px;
+            font-size: 1.2rem;
+            cursor: pointer;
+            z-index: 1;
+            border-radius: 50%;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background 0.3s, transform 0.3s;
+        }
 
+        .carousel-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateY(-50%) scale(1.1);
+        }
 
-}
-@media (max-width: 768px) {
-  .puzzle-gallery {
-    display: block; /* Απενεργοποίηση του grid σε κινητά */
-    padding: 0;
-  }
+        .carousel-btn.left {
+            left: 10px;
+        }
 
-  .puzzle-gallery img {
-  width: 100vw;
-  max-width: 390px;
-  margin: 10px;
-
-  border-radius: 10px;
-  height: auto;
-  display: block;
-}
-}
-@media (max-width: 600px) {
-  .category-buttons {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-
-  .category-buttons button {
-    width: 90%;
-    font-size: 18px;
-  }
+        .carousel-btn.right {
+            right: 10px;
+        }
 
 
-}
-@media (max-width: 600px) {
-  .puzzle-gallery {
-    display: block; /* Απενεργοποίηση του grid σε κινητά */
-    padding: 0;
-  }
+        .category-buttons button {
+            padding: 10px 20px;
+            background-color: #0a9396;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
 
-  .puzzle-gallery img {
-  width: 100vw;
-  max-width: 390px;
-  margin: 10px;
+        .category-buttons button:hover {
+            background-color: #007f7f;
+        }
 
-  border-radius: 10px;
-  height: auto;
-  display: block;
-}
-}
+
+        /* Στυλ για τα modals */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            width: 80%;
+            max-width: 600px;
+            position: relative; /* Προσθήκη για το απόλυτα τοποθετημένο "X" */
+        }
+
+        .close {
+            font-size: 24px;
+            color: #343a40;
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+        @media (max-width: 768px) {
+            .category-buttons {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                align-items: center;
+                margin-bottom: 20px;
+            }
+
+            .category-buttons button {
+                width: 90%;
+                font-size: 18px;
+            }
+
+
+        }
+        @media (max-width: 768px) {
+            .puzzle-gallery {
+                display: block; /* Απενεργοποίηση του grid σε κινητά */
+                padding: 0;
+            }
+
+            .puzzle-gallery img {
+                width: 100vw;
+                max-width: none; /* Αφαίρεση του max-width για να καταλαμβάνει όλο το πλάτος */
+                margin: 10px 0; /* Αλλαγή σε 0 για να μην υπάρχουν περιθώρια δεξιά και αριστερά */
+
+                border-radius: 10px;
+                height: auto;
+                display: block;
+            }
+        }
+        @media (max-width: 600px) {
+            .category-buttons {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                align-items: center;
+                margin-bottom: 20px;
+            }
+
+            .category-buttons button {
+                width: 90%;
+                font-size: 18px;
+            }
+
+
+        }
+        @media (max-width: 600px) {
+            .puzzle-gallery {
+                display: block; /* Απενεργοποίηση του grid σε κινητά */
+                padding: 0;
+            }
+
+            .puzzle-gallery img {
+                width: 100vw;
+                max-width: none; /* Αφαίρεση του max-width για να καταλαμβάνει όλο το πλάτος */
+                margin: 10px 0; /* Αλλαγή σε 0 για να μην υπάρχουν περιθώρια δεξιά και αριστερά */
+
+                border-radius: 10px;
+                height: auto;
+                display: block;
+            }
+        }
   </style>
 </head>
 <body>
@@ -316,16 +316,72 @@
 
   </div>
 
-  <section id="projects">
+  <div class="news-ticker-banner">
+    <div class="ticker-wrap">
+        <div class="ticker-item">Νέες πολιτιστικές εκδηλώσεις στην πόλη</div>
+        <div class="ticker-item">Ανακαλύψτε μοναδικούς τουριστικούς προορισμούς</div>
+        <div class="ticker-item">Προγράμματα για την προστασία του περιβάλλοντος</div>
+        <div class="ticker-item">Εκπαιδευτικά σεμινάρια για όλους</div>
+        <div class="ticker-item">Τεχνολογικές καινοτομίες που αλλάζουν τη ζωή μας</div>
+    </div>
+</div>
+
+<section id="projects">
     <div class="container">
-      <h3>Δράσεις</h3>
-      <div class="category-buttons">
-        <button onclick="openModal('culture')">Πολιτισμός</button>
-        <button onclick="openModal('tourism')">Τουρισμός</button>
-        <button onclick="openModal('environment')">Περιβάλλον</button>
-        <button onclick="openModal('education')">Εκπαίδευση</button>
-        <button onclick="openModal('technology')">Τεχνολογία</button>
-      </div>
+        <h3>Δράσεις</h3>
+        <div class="category-buttons">
+            <button onclick="window.location.href='culture_page.html'">Πολιτισμός</button>
+            <button onclick="window.location.href='tourism_page.html'">Τουρισμός</button>
+            <button onclick="window.location.href='environment_page.html'">Περιβάλλον</button>
+            <button onclick="window.location.href='education_page.html'">Εκπαίδευση</button>
+            <button onclick="window.location.href='technology_page.html'">Τεχνολογία</button>
+        </div>
+        </div>
+</section>
+
+<style>
+.news-ticker-banner {
+background-color: #2C3E50; /* Σκούρο μπλε */
+color: white;
+padding: 8px 0; /* Μείωση του vertical padding */
+overflow: hidden;
+white-space: nowrap;
+border-bottom: 2px solid #FFD700; /* Χρυσή γραμμή */
+}
+
+.ticker-wrap {
+display: inline-block;
+padding-left: 100%; /* Ξεκινάει εκτός οθόνης */
+animation: ticker 15s linear infinite; /* Προσαρμόστε την ταχύτητα εδώ */
+}
+
+.ticker-item {
+display: inline-block;
+padding: 0 0; /* Αφαιρούμε το οριζόντιο padding από το ticker-item */
+font-size: 1.1em;
+margin-right: 10px; /* Προσθέτουμε περιθώριο δεξιά για την απόσταση πριν την κάθετο */
+}
+
+.ticker-item::after {
+content: " | "; /* Προσθέτει την κάθετο μετά από κάθε στοιχείο */
+padding-left: 10px; /* Προσθέτει την απόσταση μετά την κάθετο */
+}
+
+.ticker-item:last-child::after {
+content: ""; /* Αφαιρεί την κάθετο μετά το τελευταίο στοιχείο */
+}
+
+@keyframes ticker {
+0% { transform: translateX(0); }
+100% { transform: translateX(-100%); }
+}
+</style>
+
+<script>
+    function openModal(category) {
+        console.log("Άνοιξε modal για: " + category);
+    }
+</script>
     
       <!-- Modals για κάθε κατηγορία -->
       <div id="cultureModal" class="modal">
