--- a/projects.html
+++ b/projects.html
@@ -270,6 +270,9 @@
                 display: block;
             }
         }
+      .container h3 {
+    color: #ffffff; /* Άσπρο χρώμα για το "Δράσεις" */
+}
   </style>
 </head>
 <body>
