--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
    
-   .project-gallery {
+  .project-gallery {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
@@ -36,22 +36,52 @@
         }
 
         .puzzle-gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 10px;
-            padding: 20px;
-        }
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 10px;
+    padding: 20px;
+}
 
+.puzzle-gallery img {
+    width: 100%;
+    height: 200px; /* Ορίστε το επιθυμητό σταθερό ύψος (π.χ., 200px) */
+    object-fit: cover; /* Καλύπτει το πλαίσιο διατηρώντας τις αναλογίες */
+    border-radius: 12px;
+    opacity: 0;
+    transform: scale(0.8) rotateZ(3deg);
+    transition: all 0.5s ease; /* Απλή μετάβαση για την εμφάνιση */
+}
 
-        .puzzle-gallery img {
-            width: 100%;
-            height: auto; /* Αλλαγή σε auto για να προσαρμόζεται το ύψος */
-            object-fit: cover; /* Γεμίζει το πλαίσιο χωρίς να παραμορφώνει */
-            border-radius: 12px;
-            opacity: 0;
-            transform: scale(0.8) rotateZ(3deg);
-            transition: all 0.5s ease; /* Απλή μετάβαση για την εμφάνιση */
-        }
+@media (max-width: 768px) {
+    .puzzle-gallery {
+        display: block; /* Απενεργοποίηση του grid σε κινητά */
+        padding: 0;
+    }
+
+    .puzzle-gallery img {
+        width: 100vw;
+        max-width: none; /* Αφαίρεση του max-width για να καταλαμβάνει όλο το πλάτος */
+        margin: 10px 0; /* Αλλαγή σε 0 για να μην υπάρχουν περιθώρια δεξιά και αριστερά */
+        height: auto; /* Επαναφορά του ύψους σε auto για κινητά */
+        border-radius: 10px;
+        display: block;
+    }
+}
+@media (max-width: 600px) {
+    .puzzle-gallery {
+        display: block; /* Απενεργοποίηση του grid σε κινητά */
+        padding: 0;
+    }
+
+    .puzzle-gallery img {
+        width: 100vw;
+        max-width: none; /* Αφαίρεση του max-width για να καταλαμβάνει όλο το πλάτος */
+        margin: 10px 0; /* Αλλαγή σε 0 για να μην υπάρχουν περιθώρια δεξιά και αριστερά */
+        height: auto; /* Επαναφορά του ύψους σε auto για κινητά */
+        border-radius: 10px;
+        display: block;
+    }
+}
 
         /* Ορισμός του animation */
         @keyframes fadeIn {
@@ -234,7 +264,7 @@
                 margin: 10px 0; /* Αλλαγή σε 0 για να μην υπάρχουν περιθώρια δεξιά και αριστερά */
 
                 border-radius: 10px;
-                height: auto;
+
                 display: block;
             }
         }
@@ -270,7 +300,7 @@
                 display: block;
             }
         }
-      .container h3 {
+        .container h3 {
     color: #ffffff; /* Άσπρο χρώμα για το "Δράσεις" */
 }
   </style>
