--- a/projects.html
+++ b/projects.html
@@ -363,11 +363,11 @@
     <div class="container">
         <h3>Δράσεις</h3>
         <div class="category-buttons">
-            <button onclick="window.location.href='culture_page.html'">Πολιτισμός</button>
-            <button onclick="window.location.href='tourism_page.html'">Τουρισμός</button>
-            <button onclick="window.location.href='environment_page.html'">Περιβάλλον</button>
-            <button onclick="window.location.href='education_page.html'">Εκπαίδευση</button>
-            <button onclick="window.location.href='technology_page.html'">Τεχνολογία</button>
+            <button onclick="window.location.href='projects.html'">Πολιτισμός</button>
+            <button onclick="window.location.href='projects.html'">Τουρισμός</button>
+            <button onclick="window.location.href='projects.html'">Περιβάλλον</button>
+            <button onclick="window.location.href='projects.html'">Εκπαίδευση</button>
+            <button onclick="window.location.href='projects.html'">Τεχνολογία</button>
         </div>
         </div>
 </section>
