--- a/projects.html
+++ b/projects.html
@@ -349,13 +349,14 @@
 
   </div>
 
+ 
   <div class="news-ticker-banner">
     <div class="ticker-wrap">
-        <div class="ticker-item">Νέες πολιτιστικές εκδηλώσεις στην πόλη</div>
-        <div class="ticker-item">Ανακαλύψτε μοναδικούς τουριστικούς προορισμούς</div>
-        <div class="ticker-item">Προγράμματα για την προστασία του περιβάλλοντος</div>
-        <div class="ticker-item">Εκπαιδευτικά σεμινάρια για όλους</div>
-        <div class="ticker-item">Τεχνολογικές καινοτομίες που αλλάζουν τη ζωή μας</div>
+        <div class="ticker-item">Ενίσχυση και προβολή του σύγχρονου ελληνικού πολιτισμού Παγκοσμίως  </div>
+        <div class="ticker-item">Σύνδεση του τουρισμού με την προβολή του σύγχρονου πολιτισμού</div>
+        <div class="ticker-item">Προβολή μιας σύγχρονης "πολιτιστικής" διάστασης της περιβαλλοντικής συνείδησης</div>
+        <div class="ticker-item">Σύνδεση της εκπαίδευσης με την προβολή του σύγχρονου ελληνικού πνεύματος</div>
+        <div class="ticker-item">Ένταξη της τεχνολογίας στην ευρύτερη έννοια του σύγχρονου πολιτισμού</div>
     </div>
 </div>
 
@@ -385,7 +386,7 @@ border-bottom: 2px solid #FFD700; /* Χρυσή γραμμή */
 .ticker-wrap {
 display: inline-block;
 padding-left: 100%; /* Ξεκινάει εκτός οθόνης */
-animation: ticker 15s linear infinite; /* Προσαρμόστε την ταχύτητα εδώ */
+animation: ticker 25s linear infinite; /* Προσαρμόστε την ταχύτητα εδώ */
 }
 
 .ticker-item {
